services/accounts/pre/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: accounts
  annotations:
    external-dns.alpha.kubernetes.io/hostname: accounts-pre.svc.plus
spec:
  ingressClassName: caddy
  tls:
    - hosts:
        - accounts-pre.svc.plus
      secretName: accounts-pre-tls
  rules:
    - host: accounts-pre.svc.plus
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: accounts
                port:
                  number: 80
